[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda-labs-client"
version = "0.3.1"
authors = [
    {name = "Radek Osmulski", email = "rosmulski@gmail.com"},
]
description = "A Python client for Lambda Labs Cloud API for managing GPU instances"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
keywords = ["lambda", "labs", "gpu", "cloud", "api", "machine-learning", "ai"]
dependencies = [
    "requests>=2.25.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/radekosmulski/lambda_labs_api"
"Bug Reports" = "https://github.com/radekosmulski/lambda_labs_api/issues"
"Source" = "https://github.com/radekosmulski/lambda_labs_api"

[project.scripts]
lambda-labs = "lambda_labs_client.cli:main"

[tool.setuptools.packages.find]
include = ["lambda_labs_client*"]

[tool.black]
line-length = 100
target-version = ['py36']

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true